qtwebkit (2.2.1-7) UNRELEASED; urgency=low


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 01 Oct 2013 19:02:49 +0200

qtwebkit (2.2.1-6) unstable; urgency=low

  * Avoid auto_clean error when building with --git-overlay.
  * New patch: ignore-unused-local-typedefs_error.diff. (Closes: #701345)
  * New patch: upstream_Build-fixes-for-glib-2.31.diff.
  * Add missing misc:Pre-Depends.
  * Update libqtwebkit4 symbols file.
  * Update vcs fields.
  * Add myself to uploaders.
  * Bump Standards-Version to 3.9.4.
  * Update copyright file.
  * Add m-a same to the dbg package.

 -- Maximiliano Curia <maxy@debian.org>  Thu, 27 Jun 2013 17:19:31 +0200

qtwebkit (2.2.1-5) unstable; urgency=low

  * Team upload.
  * Re upload the package to fix the M-A uninstallability due to a binNMU
    (Closes: #676162).
  * This upload will get rebuilt with xz compression (Closes: #687036).
    Thanks Ansgar Burchardt for the patch.
  * Rewrite debian/copyright to DEP-5 (Closes: #673268).
    Thanks Elena ``of Valhalla'' Grandi and Tobias Bengfort.
    The current copyright is *huge*: 12637 lines. I have reviewed it but
    there still could be errors.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 18 Nov 2012 18:01:12 -0300

qtwebkit (2.2.1-4) unstable; urgency=high

  * Confirm new symbol file on all arches except armel and mipsel. However,
    hopefully, it will work on those two as well.
  * Urgency=high because we need multi-arch capable QtWebKit in testing as
    multi-arch Qt4 and non-multiarch QtWebKit do not play well for development
    purposes.

 -- Modestas Vainius <modax@debian.org>  Sun, 13 May 2012 12:24:37 +0300

qtwebkit (2.2.1-3) unstable; urgency=low

  * Build Source/WebCore/generated/* with hidden visibility as well (patch
    webkit_qt_hide_symbols.diff). This reduces a symbol file a lot and brings
    it back to manageable state.
  * Update symbol file: a bunch of private WebCore symbols are gone from