@@ -8,7 +8,7 @@ QWEBVIEW_DIR=debian/plugins/qwebview
 # Filter -g from environment on troublesome arches. Replace it with -gstabs
 # See also: stabs_format_debug_info.diff
 DEB_HOST_ARCH ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
-ifneq (,$(filter $(DEB_HOST_ARCH),s390 s390x armel armhf mips mipsel))
+ifneq (,$(filter $(DEB_HOST_ARCH),s390 s390x armel armhf mips mipsel sh4))
     export DEB_CFLAGS_MAINT_STRIP := -g
     export DEB_CFLAGS_MAINT_APPEND := -gstabs
     export DEB_CXXFLAGS_MAINT_STRIP := -g
