@@ -1,5 +1,7 @@
 qtwebkit (2.2.1-7) UNRELEASED; urgency=low
 
+  [ Nobuhiro Iwamatsu ]
+  * Fix build on Renesas sh4, using -gstabs instead of -g. (Closes: #694773)
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 01 Oct 2013 19:02:49 +0200
 
